--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,6 @@ jobs:
     name: Build & Test Spring Boot Backend
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: backend
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -25,16 +21,13 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Build with Maven
+      - name: Build Spring Boot App
+        working-directory: ./backend/elearning
         run: mvn clean install -DskipTests=false
 
   build-frontend:
     name: Build React Frontend
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: frontend
 
     steps:
       - name: Checkout code
@@ -46,10 +39,13 @@ jobs:
           node-version: '18'
 
       - name: Install Dependencies
+        working-directory: ./frontend/elearning
         run: npm install
 
-      - name: Run Lint & Tests
+      - name: Run React Tests
+        working-directory: ./frontend/elearning
         run: npm run test -- --watchAll=false
 
       - name: Build React App
+        working-directory: ./frontend/elearning
         run: npm run build
