--- a/backend/elearning/src/main/resources/application.properties
+++ b/backend/elearning/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# Disable vector store to prevent Spring AI auto config
+spring.ai.vectorstore.redis.enabled=false
