Disabling vector AI.

--- a/backend/elearning/src/main/resources/application.properties
+++ b/backend/elearning/src/main/resources/application.properties
@@ -9,4 +9,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Disable vector store to prevent Spring AI auto config
+spring.autoconfigure.exclude=org.springframework.ai.vectorstore.redis.autoconfigure.RedisVectorStoreAutoConfiguration
 spring.ai.vectorstore.redis.enabled=false
